--- a/v308/content/durchfuehrung.tex
+++ b/v308/content/durchfuehrung.tex
@@ -64,7 +64,7 @@ Um dann in den negativen Bereich zu gelangen wird die Verkabelung umgedreht. Dan
 bis $10\unit{\ampere}$ hochgemessen. Nun wurde die gesamte Hysteresekurve abgemessen.
 \begin{figure}
     \centering
-    \caption{Dies ist ein des Versuchaufbaus zur Toroidspule.\cite{v308}}
+    \caption{Dies ist ein Bild des Versuchaufbaus zur Toroidspule.\cite{v308}}
     \label{fig:Aufbau_Toroid}
     \includegraphics[width=\textwidth]{content/RingSpuleAufbau.PNG}
 \end{figure}
