--- a/v308/content/durchfuehrung.tex
+++ b/v308/content/durchfuehrung.tex
@@ -37,9 +37,9 @@ gleichen Achse gemessen wird. Man wählt einem Messnullpunkt und schiebt die Hal
 an diesen Stellen gemessen. Aus Symetriegründen reicht es aus bis zur Mitte der Spule zu messen.
 \begin{figure}
     \centering
-    \caption{In diesem Bild ist die verwendete lange Spule abgebildet.}
+    \caption{In diesem Bild ist die verwendete lange Spule abgebildet. Die Länge der Spule wurde graphisch auf $16.4 \: \unit{\centi\metre}$ bestimmt.}
     \label{fig:Aufbau_lange_Spule}
-    \includegraphics[width=0.55\textwidth,angle=90]{content/LangeSpule.jpg}
+    \includegraphics[width=0.7\textwidth]{content/LangeSpule.jpg}
 \end{figure}
 \subsection{Messung des Magnetfelds eines Spulenpaares}
 \label{subsec:D_Spulenpaar}
@@ -52,7 +52,7 @@ Längen wiederholt.
     \centering
     \caption{In diesem Bild ist der Versuchsaufbau zum Helmholtzspulenpaar dargestellt.\cite{v308}}
     \label{fig:Aufbau_Spulenpaar}
-    \includegraphics[width=\textwidth]{content/HelmHoltzAufbau.PNG}
+    \includegraphics[width=0.7\textwidth]{content/HelmHoltzAufbau.PNG}
 \end{figure}
 \subsection{Messung des Magnetfeldes einer Toroid-Spule zur Bestimmung der Hysteresekurve}
 \label{subsec:D_Hysterese}
@@ -66,5 +66,5 @@ bis $10\unit{\ampere}$ hochgemessen. Nun wurde die gesamte Hysteresekurve abgeme
     \centering
     \caption{Dies ist ein Bild des Versuchaufbaus zur Toroidspule.\cite{v308}}
     \label{fig:Aufbau_Toroid}
-    \includegraphics[width=\textwidth]{content/RingSpuleAufbau.PNG}
+    \includegraphics[width=0.7\textwidth]{content/RingSpuleAufbau.PNG}
 \end{figure}
