--- a/v308/content/diskussion.tex
+++ b/v308/content/diskussion.tex
@@ -1,3 +1,29 @@
 \section{Diskussion}
 \label{sec:Diskussion}
-Zuerst werden die Messergebnisse zur langen Spule betrachtet
+Zuerst werden die Messergebnisse zur langen Spule betrachtet. Der theoretische Wert für die magnetische Flussdichte innerhalb der Spule beträgt 
+$B_{\text{Theorie}} = 2.299\:\unit{\milli\tesla}$, der experimentelle Wert wurde zu $B_{\text{exp}} = 2.335\:\unit{\milli\tesla}$ bestimmt. 
+Dies entspricht einer relativen Abweichung von $\symup{\Delta_{\text{rel}}} = 1.57 \%$, was in Anbetracht der aufbaubedingten Messungenauigkeiten 
+eine sehr geringe Abweichung ist. Auffällig ist, dass das gemessene Magnetfeld im Inneren der Spule nicht homogen verläuft, sondern bis zu einer Eindringtiefe von
+ca. $2 \: \unit{\centi\metre}$ noch deutlich ansteigt und auch bis $5 \unit{\centi\metre}$ nicht eindeutig als homogen betrachtet werden kann.
+Dies zeigt, dass die theoretischen Näherungen einer "langen"\: Spule nicht vollständig den realen Verhältnissen entsprechen, da die Randeffekte in einem größeren
+Bereich zu Abweichungen führen. Eine Ursache dafür ist, dass die verwendete Spule mit einer Länge von etwa $l = 16.4\: \unit{\centi\metre}$ und einem Radius von 
+$r = 2.05 \: \unit{\centi\metre}$ nicht den Idealbedingungen einer langen Spule entspricht.
+
+
+Bei der Messung zum Helmholtzspulenpaar wurden die drei Abstände $d_1 = 10\: \unit{\centi\metre}$, $d_2~=~15\: \unit{\centi\metre}$
+und $d_3 = 20\: \unit{\centi\metre}$ betrachtet. Die experimentell bestimmten Werte im Mittelpunkt der Spulen haben die relativen Abweichungen 
+$\symup{\Delta_{\text{rel}1}} = 0.29 \%$, $\symup{\Delta_{\text{rel}2}} = 5.31\%$ und $\symup{\Delta_{\text{rel}1}} = 6.35 \%$ zu den Theoriewerten, wobei in allen 
+drei Messungen keine experimentellen Werte vorhanden waren, die exakt in der Spulenmitte lagen. Des Weiteren sind die Skalen, mit denen der Spulenabstand und die 
+Position der Hallsonde bestimmt wurden um ca. $2.3\: \unit{\centi\metre}$ zueinander verschoben, weshalb der Mittelpunkt der Spulen nicht genau ermittelt werden konnte.
+Da alle experimentellen Werte über den Theoriewerten liegen, ist es möglich, dass die Ursache dafür eine zu hohe Stromstärke ist. Diese wurde an einem
+analogen Messgerät auf $4 \: \unit{\ampere}$ geregelt, wobei eine Ungenauigkeit von $0.1 \: \unit{\ampere}$ durchaus denkbar ist. Selbiges gilt für die Bestimmung des
+Spulenabstandes über die Längenskala. Insgesamt stimmen die Messwerte mit dem Verlauf der Theoriekurven weitgehend überein, was auf die Qualität dieser hindeutet.
+
+
+Die Hysteresekurve des Kernmaterials der Ringspule lässt sich nicht mit Theoriewerten vergleichen. Jedoch stimmt sie mit dem allgemeinen Verlauf einer Hysteresekurve gut
+überein und weist eine hohe Symmetrie auf, was ebenfalls ein Indikator für die Qualität der Messung ist. So weichen beispielsweise die Werte der positiven- und negativen 
+Sättigung $+B_S = 709.5 \: \unit{\milli\tesla}$ und $-B_S = -709.6 \: \unit{\milli\tesla}$ nur um $0.1 \unit{\milli\tesla}$ voneinander ab. 
+
+
+Zusammenfassend lässt sich festellen, dass die Messergebnisse im Rahmen der Mess- Ungenauigkeiten und Unsicherheiten gut mit der Theorie übereinstimmen. Die berechneten
+Abweichungen liegen trotz der möglichen Fehlerquellen in einem akzeptablen Bereich. 
