--- a/v308/content/auswertung.tex
+++ b/v308/content/auswertung.tex
@@ -16,7 +16,7 @@ für das homogene Magnetfeld innerhalb der Spule liefern. Daher lautet $B_{\text
 \subsection{Magnetfeld des Helmholtzspulenpaares}
 \label{subsec:A_Helmholtz}
 Die gemessenen Magnetfelder des Helmholtzspulenpaares sind zusammen mit ihrem theoretischen Verlauf, für die drei verwendeten Abstände, in den Abbildungen \ref{fig:PlotHH1}, \ref{fig:PlotHH2} und \ref{fig:PlotHH3} 
-graphisch dargestellt. Die experimentellen Werte des Magnetfeldes in der Mitte des Spulenpaares lassen sich der autoref{TABBELEZU HELMSCHMOLZ MACHENAM ENDE MACHEN} entnehmen. Da aber die Skala um $2.3\:\unit{\centi\metre}$ verschoben ist muss der Wert
+graphisch dargestellt. Die experimentellen Werte des Magnetfeldes in der Mitte des Spulenpaares lassen sich den Abbildungen \ref{fig:PlotHH1}, \ref{fig:PlotHH2} und \ref{fig:PlotHH3} entnehmen. Da aber die Skala um $2.3\:\unit{\centi\metre}$ verschoben ist muss der Wert
 genommen werden, welcher am nächsten bei $\frac{d}{2} - 2.3\:\unit{\centi\metre}$ liegt. Daher ist für den Abstand von $d = 10\:\unit{\centi\metre}$ das Magnetfeld $B_{\text{exp,1}} = 3.840\:\unit{\milli\tesla}$.
 Der Theoriewert dazu berechnet sich gemäß Formel \eqref{eqn:Helmholtz} zu $B_{\text{Theorie,1}} = 3.829\:\unit{\milli\tesla}$.
 \begin{figure}[H]
@@ -50,7 +50,7 @@ Zuletzt wird das Magnetfeld für den Abstand von $d = 20\:\unit{\centi\metre}$ a
 \end{figure}
 
 Zunächst wird das gemessene Magnetfeld gegen den Strom $I$ aufgetragen, wie in \autoref{fig:PlotHysterese} zu sehen ist. Für den experimentell bestimmten
-Sättigungswert $B_S$ wird der letzte Messpunkt der Neukurve verwendet. Dieser kann autoref{tab:SCHMABELLE MACHEN MIT DEN GANZEN WERTEN UND SO MEIN GOTT} entnommen werden und
+Sättigungswert $B_S$ wird der letzte Messpunkt der Neukurve verwendet. Dieser kann \autoref{fig:PlotHysterese} entnommen werden und
 liegt im Punkt $I = 10\:\unit{\ampere}$ $B_s = 696.8\:\unit{\milli\tesla}$.
 Die Remenanz $B_r$ enspricht dem $y$-Achsenabschnitt und lautet so $ B_r = 124.5 \:\unit{\milli\tesla}$.
 \begin{figure}
